@@ -44,7 +44,7 @@ public class NotifierThread extends InternalSession
 {
 
 	public final static String name = "Notifier";
-	public final static Integer ZERO = new Integer(0);
+	public final static Integer ZERO = Integer.valueOf(0);
 
 	private HashMap<Long,Integer> jsToNotify;
 
@@ -89,7 +89,7 @@ public class NotifierThread extends InternalSession
 	{
 		Integer cnt = jsToNotify.get(id);
 		if (cnt != null) {
-			jsToNotify.put(id, new Integer(cnt.intValue() + 1));
+			jsToNotify.put(id, Integer.valueOf(cnt.intValue() + 1));
 		}
 	}
 
